@@ -38,21 +38,32 @@
 #'
 #' \dontrun{ # Server response can be slow; this cuts down check time.
 #'
-#' # types of input
+#' ##### basic usage
+#' ########################################
+#'
 #' geocode("houston texas")
 #' geocode("1600 pennsylvania avenue, washington dc")
 #' geocode("the white house")
 #' geocode(c("the white house", "washington dc"))
+#' # see also mutate_geocode()
 #'
 #'
-#' register_google(key = "your code here")
-#' geocode("houston texas")
+#'
+#' ##### types of output
+#' ########################################
 #'
 #' # types of output
 #' geocode("houston texas", output = "latlona")
 #' geocode("houston texas", output = "more")
 #' geocode("Baylor University", output = "more")
 #' str(geocode("Baylor University", output = "all"))
+#'
+#'
+#' ##### interfacing with the google geocoding api
+#' ########################################
+#'
+#' register_google(key = "your code here")
+#' geocode("houston texas")
 #'
 #'
 #' # see how many requests we have left with google
@@ -62,10 +73,13 @@
 #'
 #'
 #'
-#' # known issues :
-#' # (1) source = "dsk" can't reliably geocode colloquial place names
+#' ##### known issues
+#' ########################################
+#' # sources often have a hard time reliably geocoding colloquial place names
 #' geocode("city hall houston")
+#' geocode("city hall houston texas")
 #' geocode("rice university")
+#' geocode("rice university houston texas")
 #'
 #'
 #' }
@@ -145,7 +159,7 @@ geocode <- function(location, output = c("latlon", "latlona", "more", "all"),
   url_string <- paste0(url_string, inject)
 
   # encode
-  url_string <- URLencode(url_string)
+  url_string <- enc2utf8( URLencode(url_string) )
   url_hash   <- digest::digest(url_string)
 
 
